# ctx

./: .gitignore  LICENSE  NOTICE  README.md  TESTING.md  pyproject.toml  specification.md
src/ctx/: __init__.py  emitter.py  escaping.py  grammar.py  models.py  parser.py
src/ctx/cli/: convert.py  parse.py
src/ctx/converter/: __init__.py  annotator.py  classifier.py  extractor.py  fetcher.py  normalizer.py  pipeline.py  tiers.py
src/ctx/service/: __init__.py  app.py  config.py  routes.py
tests/: REPORT_100.md  results_100.json  test_100_sites.py  test_fidelity.py
