[project]
name = "ctx"
version = "1.0.0"
description = "CTX (Context Transfer Format) converter and service"
license = "Apache-2.0"
authors = [{name = "Fox Valley AI Foundation"}]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "httpx>=0.28",
    "lxml>=5.0",
    "readability-lxml>=0.8",
    "beautifulsoup4>=4.12",
    "pydantic>=2.10",
    "redis>=5.0",
    "click>=8.1",
]

[project.scripts]
ctx-convert = "ctx.cli.convert:main"
ctx-parse = "ctx.cli.parse:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "pytest-httpx>=0.35"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
